tests/k8s_testcases/expected_output/onlineboutique-conn-graph-no-fw-rules.txt
0.0.0.0-255.255.255.255 => default/redis-cart[Deployment] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-dns-livesim[Pod] : All Connections
default/adservice[Deployment] => default/adservice[Deployment] : All Connections
default/cartservice[Deployment] => default/cartservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/cartservice[Deployment] : TCP 7070
default/checkoutservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/currencyservice[Deployment] : TCP 7000
default/checkoutservice[Deployment] => default/emailservice[Deployment] : TCP 8080
default/checkoutservice[Deployment] => default/paymentservice[Deployment] : TCP 50051
default/checkoutservice[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/checkoutservice[Deployment] => default/shippingservice[Deployment] : TCP 50051
default/checkoutservice[Deployment] => kube-system/kube-dns-livesim[Pod] : UDP 53
default/currencyservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/emailservice[Deployment] => default/emailservice[Deployment] : All Connections
default/frontend[Deployment] => default/adservice[Deployment] : TCP 9555
default/frontend[Deployment] => default/cartservice[Deployment] : TCP 7070
default/frontend[Deployment] => default/checkoutservice[Deployment] : TCP 5050
default/frontend[Deployment] => default/currencyservice[Deployment] : TCP 7000
default/frontend[Deployment] => default/frontend[Deployment] : All Connections
default/frontend[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/frontend[Deployment] => default/recommendationservice[Deployment] : TCP 8080
default/frontend[Deployment] => default/shippingservice[Deployment] : TCP 50051
default/frontend[Deployment] => kube-system/kube-dns-livesim[Pod] : UDP 53
default/loadgenerator[Deployment] => default/frontend[Deployment] : TCP 8080
default/loadgenerator[Deployment] => kube-system/kube-dns-livesim[Pod] : UDP 53
default/paymentservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/recommendationservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/recommendationservice[Deployment] => kube-system/kube-dns-livesim[Pod] : UDP 53
default/redis-cart[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/redis-cart[Deployment] => default/redis-cart[Deployment] : All Connections
default/redis-cart[Deployment] => kube-system/kube-dns-livesim[Pod] : All Connections
default/shippingservice[Deployment] => default/shippingservice[Deployment] : All Connections
kube-system/kube-dns-livesim[Pod] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-dns-livesim[Pod] => default/redis-cart[Deployment] : All Connections
kube-system/kube-dns-livesim[Pod] => kube-system/kube-dns-livesim[Pod] : All Connections
